==============================
   FoxBot Version History
==============================

--------------------------------------------------------------------------------
Version 0.85
??-??-202?
Updated by RoboCop
--------------------------------------------------------------------------------

- Added C++17 support for Win32 and Linux

- Fixed the bot_chat cvar and the 'WRITE_BYTE` implicit conversion for waypoint coding

- Enhanced the waypoint area data for dustbowl

- Removed lame SG Turret nodes for 2fort and well in non recommended areas 

TODO List:-

>> Complete 'botdontmove' in order for "GolfBots" to stay stationary

>> To allow medic bots to heal more often, but not allow `JOB_BUFF_ALLY` to consume to many cells as engineers

>> To allow soldier bots to Rocket Jump easily

>> Fix bots navigation when shot by enemies as they sometimes cannot seem to detect where damage is coming from

>> To prevent engineers to go around SG turrets when repairing/upgrading

>> To allow bots to use Nail Guns for destroying SG turrets, when out of nades or from a long distance

>> To prevent bots from shooting at spy corpses too long as, they aren't aware that a player switched teams as enemy spy

>> Allow bots to toss grenades at a higher angle and from a lower range as their target aim is too far

>> BONUS: Maybe add a feature for bots to have experience and wisdom or learned data in order to be more human

--------------------------------------------------------------------------------
Version 0.801
November-05-2022
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ congestus_lg

- Added area for bots to report Sentry Built in dustbowl hut entry in CP1

- Fixed typo bot team report for avanti area file

- Added more delay for bots to Team Report to prevent annoying chat flooding

- Increased priority for bots to steal flags

- Improved floating point precision
